--- a/.gitignore
+++ b/.gitignore
@@ -97,4 +97,6 @@ InitTestScene*.unity*
 
 # Auto-generated scenes by play mode tests
 /[Aa]ssets/[Ii]nit[Tt]est[Ss]cene*.unity*
-CS417_MP0/Library/*
+CS417_MP0/[Ll]ibrary/*
+CS417_MP0/[Ll]ibrary/[Bb]ee/*
+CS417_MP0/[Tt]emp/*
